# airsim-client

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  docker-compose.yaml
.github/workflows/: rust-ci.yml  rust-pr.yml
docker/: Dockerfile  docker-entrypoint.sh  requirements.txt  settings.json
docs/: README.md
examples/: connect.rs  manual_mode.rs  move_by.rs  move_by_pwm.rs  move_by_rpy.rs  move_on_path.rs  set_gains.rs  state.rs  takeoff_and_land.rs  takeoff_move_and_land.rs
examples/environment/: light_control.rs  settings.json
examples/multirotor/: camera.rs  cancel_culture.rs  connect.rs  manual_mode.rs  move_by_pwm.rs  move_by_rpy.rs  move_on_path.rs  read_sensors.rs  settings.json  state.rs  takeoff_move_and_land.rs
src/: client.rs  error.rs  lib.rs  msgpack.rs  types.rs
src/clients/: airsim_client.rs  car_client.rs  mod.rs  multi_rotor_client.rs
src/types/: collision_info.rs  drive_train.rs  gains.rs  geopoint.rs  image.rs  mod.rs  multi_rotor_state.rs  path.rs  pose.rs  pwm.rs  rc_data.rs  rotor_states.rs  simulation.rs  vector.rs  weather.rs  yaw_mode.rs
