[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
autotests = false
categories = ["game"]
description = "A Rust client library for Airsim."
documentation = "https://docs.rs/airsim-client"
edition = "2021"
homepage = "https://github.com/sollimann/airsim-client"
keywords = ["drone", "unreal", "airsim", "robotics", "game"]
license = "MIT"
name = "airsim-client"
readme = "../README.md"
repository = "https://github.com/sollimann/airsim-client.git"
rust-version = "1.60.0"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.57"
futures = "0.3.21"
log = "0.4.16"
rmp-rpc = "0.3"
rmpv = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9.0"

[[example]]
crate-type = ["bin"]
name = "robot_status"        # examples/robot_status/main.rs
path = "examples/connect.rs"
