[package]
authors = ["Kristoffer Solberg Rakstad <kristoffer.solberg@cognite.com>"]
autotests = false
categories = ["game"]
description = "A Rust client library for Airsim."
documentation = "https://docs.rs/airsim-client"
edition = "2021"
homepage = "https://github.com/sollimann/airsim-client"
keywords = ["drone", "unreal", "airsim", "robotics", "game"]
license = "MIT"
name = "airsim-client"
readme = "../README.md"
repository = "https://github.com/sollimann/airsim-client.git"
rust-version = "1.60.0"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.57"
futures = "0.3.21"
log = "0.4.16"
# rmp-rpc = "0.3"
msgpack-rpc = { git = "https://github.com/Sollimann/msgpack-rpc" }
rmpv = "0.4"
thiserror = "1.0"
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "signal",
] }

[dev-dependencies]
env_logger = "0.9.0"

# MultiRotor examples
[[example]]
crate-type = ["bin"]
name = "connect_drone"
path = "examples/multirotor/connect.rs"

[[example]]
crate-type = ["bin"]
name = "takeoff_and_land"
path = "examples/multirotor/takeoff_move_and_land.rs"

[[example]]
crate-type = ["bin"]
name = "move_by"
path = "examples/multirotor/move_by.rs"

[[example]]
crate-type = ["bin"]
name = "move_on_path"
path = "examples/multirotor/move_on_path.rs"

[[example]]
crate-type = ["bin"]
name = "manual_mode"
path = "examples/multirotor/manual_mode.rs"

[[example]]
crate-type = ["bin"]
name = "motor_pwm"
path = "examples/multirotor/move_by_pwm.rs"

[[example]]
crate-type = ["bin"]
name = "move_by_rpy"
path = "examples/multirotor/move_by_rpy.rs"

[[example]]
crate-type = ["bin"]
name = "set_gains"
path = "examples/multirotor/set_gains.rs"

[[example]]
crate-type = ["bin"]
name = "multirotor_state"
path = "examples/multirotor/state.rs"

[[example]]
crate-type = ["bin"]
name = "multirotor_camera"
path = "examples/multirotor/camera.rs"

# Simulation examples
[[example]]
crate-type = ["bin"]
name = "light_control"
path = "examples/environment/light_control.rs"
